Fixed form notification vertical alignment

--- a/style/style.css
+++ b/style/style.css
@@ -40,11 +40,16 @@ body {
   padding: 2vw;
 }
 
-.buttonAddUser {
+.barAddUser {
   display: inline-block;
-  position: relative;
   width: 100%;
   height:100%;
+  display: flex;
+  align-items: center;
+}
+
+.barForm .notification {
+  padding-left: 2vw;
 }
 
 .circle {
@@ -54,10 +59,6 @@ body {
   display: inline-block;
   padding: 0vw;
   text-align: center;
-}
-
-.barForm .notification {
-  padding-left: 2vw;
 }
 
 .success {
@@ -87,13 +88,14 @@ body {
   padding: .5vw;
   -moz-border-radius: .3vw;
   -webkit-border-radius: .3vw;
-  border-radius: .3vw;
+  border-radius: .2vw;
 }
 
 .button a {
   text-decoration: none;
   color: #0bab6b;
   font-weight: bold;
+  font-size: 1.3vw;
 }
 
 
